--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,241 @@
 /* место для вашего кода */
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+
+body {
+    margin: 0;
+}
+
+.header {
+    margin: auto;
+    width: 80%;
+    height: 193px;
+    display: flex;
+    padding-top: 2%;
+    align-items: center;
+}
+
+.container {
+    padding-top: 80px;
+    width: 80%;
+    margin: auto;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    /* Или repeat(2, 1fr) */
+}
+
+.item {
+    padding: 20px;
+    text-align: center;
+}
+
+
+.auction_container {
+    display: flex;
+}
+
+.auction_text {
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 24px;
+    padding-top: 100px;
+}
+
+.auction_text_low {
+    font-weight: 400;
+    font-size: 20px;
+    padding-top: 25px;
+}
+
+.flex_container {
+    padding-top: 100px;
+    display: flex;
+    justify-content: space-around;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 90%;
+    color: white;
+    font-size: 22px;
+    text-transform: uppercase;
+    word-spacing: 10px;
+}
+
+.container span {
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 90%;
+    color: white;
+    font-size: 22px;
+    text-transform: uppercase;
+    word-spacing: 10px;
+}
+
+.my_btn {
+    padding: 5px;
+    border: solid white 2px;
+}
+
+body {
+    font-family: 'Raleway', sans-serif;
+}
+
+a {
+    font-weight: bold;
+    color: black;
+}
+
+.header__logo-image {
+    width: 148px;
+    height: 105px;
+    margin: auto;
+}
+
+.header__menu {
+    margin-top: 25px;
+    font-weight: 400;
+    line-height: 100%;
+    letter-spacing: 0%;
+}
+
+.header__link {
+    margin-left: 15px;
+}
+
+.text_center {
+    text-align: center;
+}
+
+.my_img {
+    position: relative;
+    width: 334px;
+    height: 596px;
+}
+
+.footer {
+    display: flex;
+    position: absolute;
+    bottom: 100px;
+    height: 20px;
+    width: 100%;
+
+    justify-content: space-around;
+}
+
+.footer_lots {
+    width: 100%;
+    margin: auto;
+}
+
+.lots {
+    height: 100px;
+}
+
+.main_lot_container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.card__title {
+    font-weight: 700;
+    font-size: 22px;
+    text-align: center;
+    padding-top: 15px;
+    text-transform: uppercase;
+    color: white;
+}
+
+.lots__look-more-link {
+    padding-top: 2%;
+    padding-left: 8%;
+}
+
+.paragraph {
+    text-align: center;
+    color: white;
+    font-weight: 700;
+    font-size: 20px;
+    position: absolute;
+    bottom: 15px;
+    padding: 15px;
+}
+
+.lots p {
+    font-weight: 700;
+    font-size: 40px;
+    padding-left: 1%;
+    padding-top: 1%;
+}
+
+.back {
+    width: 100%;
+    height: 757px;
+    background-image: url("../images/lotus-flower.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.img_left {
+    background-image: url("../images/left.png");
+    background-size: cover;
+}
+
+.img_center {
+    background-image: url("../images/center.jpg");
+    background-size: cover;
+}
+
+.img_right {
+    background-image: url("../images/right.png");
+    background-size: cover;
+}
+
+.my_link {
+    color: white;
+    text-decoration: none;
+}
+
+.back p {
+    margin-top: 20px;
+    font-weight: 700;
+    font-size: 100px;
+    color: white;
+}
+
+.text_left {
+    color: aqua;
+    text-align: center;
+}
+
+p {
+    margin-bottom: 0;
+    /* Убираем нижний отступ */
+    /* Или */
+    margin: 0;
+    /* Убираем все отступы */
+}
+
+.address {
+    margin-top: 25px;
+}
+
+address p {
+    font-weight: 400;
+}
+
+address a {
+    font-weight: 400;
+
+}
+
+.social_icons{
+    width: 40px;
+    height:40px;
+    padding-left: 1%;
+}
